Finalizando a Home e Iniciando a Página de Retorno Resultado Creches

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ fabric.properties
 /.env
 /_material/
 /src/componentes/Busca/Busca-FUNCIONANDO.js
+/src/componentes/Busca/Busca-FUNCIONANDO-2.js
