--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "pubsub-js": "^1.7.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-fade-in": "^0.1.6",
     "react-leaflet": "^2.2.1",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
