--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-fade-in": "^0.1.6",
+    "react-ga": "^2.7.0",
     "react-leaflet": "^2.2.1",
     "react-loading": "^2.0.3",
     "react-lottie": "^1.2.3",
