Alteração de config frontend

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,9 +1,23 @@
 server {
     listen 80;
     server_name SERVER_NAME;
+    server_tokens off;
+    root /usr/share/nginx/html/;
+
+    location  */favicon.ico {
+                return 204;
+                access_log     off;
+                log_not_found  off;
+        }
 
     location / {
-        root /usr/share/nginx/html/;
+        alias /usr/share/nginx/html/;
+        index index.html index.htm;
+        try_files $uri /index.html;
+    }
+
+    location /vaga-na-creche/ {
+        alias /usr/share/nginx/html/;
         index index.html index.htm;
         try_files $uri /index.html;
     }
