feat(84725) Reformula rodapé Vaga na Creche

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ fabric.properties
 /_material/
 /src/componentes/Busca/Busca-FUNCIONANDO.js
 /src/componentes/Busca/Busca-FUNCIONANDO-2.js
+/!material/
